fixed pom.xml
project should build dmg for macos
and msi for windows